added new jquery ui

--- a/web/index.html
+++ b/web/index.html
@@ -84,8 +84,9 @@
 			height: 100%;
 		}
 	</style>
+	<link type="text/css" rel="stylesheet" href="/css/jquery-ui/jquery-ui-1.10.4.custom.css" />
     <script type="text/javascript" src="/js/jquery.js"></script>
-	<script src="js/jquery-ui-1.9.2.custom.min.js" ></script>
+	<script src="js/jquery-ui-1.10.4.custom.js" ></script>
 	<script type="text/javascript" src="/js/parser.js"></script>
     <script type="text/javascript" src="jsfm.js"></script>
     <script>
@@ -126,14 +127,10 @@
 			</div>
 		</div>
 	</div>
-	<img 
-		id="image" 
-		src="/img/tooth_chart.png" />
-	<div
-		id="tools">
-	</div>
-	<div 
-		id="shapes">
+	<div>
+		<img 
+			id="image" 
+			src="/img/tooth_chart.png" />
 	</div>
 </body>
 </html>
