Fixed overlay drag/resise issue

--- a/web/index.html
+++ b/web/index.html
@@ -43,6 +43,7 @@
                 style="margin-left:105px;">
                 <div
                     id="container">
+                    <canvas></canvas>
                     <canvas id="background-canvas"></canvas>
                     <div id="layerContainer">               
                     </div>
