added sie chnange

--- a/web/index.html
+++ b/web/index.html
@@ -42,6 +42,7 @@
             <div
                 style="margin-left:105px;">
                 <div
+                    resize
                     id="container">
                     <canvas></canvas>
                     <canvas id="background-canvas"></canvas>
