--- a/web/index.html
+++ b/web/index.html
@@ -58,7 +58,7 @@
                         ng-class="{selected: drawing.layerManager.isSelected(layer)}"
                         ng-click="drawing.layerManager.selectLayer(layer)" 
                         ng-repeat="layer in drawing.layerManager.layerList">
-                        <span>{{layer.name}}</span>
+                        <span>{{layer.name}}</span><span ng-click="drawing.layerManager.remove(layer)">x</span>
                     </div>
                 </div>
             </div>
