--- a/web/index.html
+++ b/web/index.html
@@ -4,11 +4,14 @@
 	<link type="text/css" rel="stylesheet" href="/css/jquery-ui/jquery-ui-1.10.4.custom.css" />
     <link type="text/css" rel="stylesheet" href="/css/drawing.css" />
     <link type="text/css" rel="stylesheet" href="/css/colorpicker.css" />
+    <link type="text/css" rel="stylesheet" href="/css/bootstrap/bootstrap.css" />
+    <link type="text/css" rel="stylesheet" href="/css/bootstrap/bootstrap-theme.css" />
     <script type="text/javascript" src="/js/src/lib/jquery.js"></script>
 	<script src="js/src/lib/jquery-ui-1.10.4.custom.js" ></script>
 	<script type="text/javascript" src="/js/src/lib/angular.js"></script>
     <script type="text/javascript" src="/js/src/lib/colorpicker.js"></script>
     <script type="text/javascript" src="jsfm.js"></script>
+    <script type="text/javascript" src="/js/src/lib/bootstrap.js"></script>
     <script>
 		fm.packages.drawing = "/js/src/classes";
 		fm.packages.common = "/js/src/classes";
@@ -17,6 +20,46 @@
 
 </head>
 <body>
+<nav class="navbar navbar-default" role="navigation">
+  <div class="container-fluid">
+    <!-- Brand and toggle get grouped for better mobile display -->
+    <div class="navbar-header">
+      <a class="navbar-brand" href="#">Paint</a>
+    </div>
+
+    <!-- Collect the nav links, forms, and other content for toggling -->
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+      <ul class="nav navbar-nav">
+        <li><a href="#">Link</a></li>
+        <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <span class="caret"></span></a>
+          <ul class="dropdown-menu" role="menu">
+            <li><a href="#">Action</a></li>
+            <li><a href="#">Another action</a></li>
+            <li><a href="#">Something else here</a></li>
+            <li class="divider"></li>
+            <li><a href="#">Separated link</a></li>
+            <li class="divider"></li>
+            <li><a href="#">One more separated link</a></li>
+          </ul>
+        </li>
+      </ul>
+      <ul class="nav navbar-nav navbar-right">
+        <li><a href="#">Link</a></li>
+        <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <span class="caret"></span></a>
+          <ul class="dropdown-menu" role="menu">
+            <li><a href="#">Action</a></li>
+            <li><a href="#">Another action</a></li>
+            <li><a href="#">Something else here</a></li>
+            <li class="divider"></li>
+            <li><a href="#">Separated link</a></li>
+          </ul>
+        </li>
+      </ul>
+    </div><!-- /.navbar-collapse -->
+  </div><!-- /.container-fluid -->
+</nav>
     <div ng-controller="mainController">
         <div
             style="height: 20px">
