--- a/web/index.html
+++ b/web/index.html
@@ -2,10 +2,11 @@
 <html>
 <head>
 	<link type="text/css" rel="stylesheet" href="/css/jquery-ui/jquery-ui-1.10.4.custom.css" />
-    <link type="text/css" rel="stylesheet" href="/css/drawing.css" />
     <link type="text/css" rel="stylesheet" href="/css/colorpicker.css" />
     <link type="text/css" rel="stylesheet" href="/css/bootstrap/bootstrap.css" />
     <link type="text/css" rel="stylesheet" href="/css/bootstrap/bootstrap-theme.css" />
+    <link type="text/css" rel="stylesheet" href="/css/bootstrap-override.css" />
+    <link type="text/css" rel="stylesheet" href="/css/drawing.css" />
     <script type="text/javascript" src="/js/src/lib/jquery.js"></script>
 	<script src="js/src/lib/jquery-ui-1.10.4.custom.js" ></script>
 	<script type="text/javascript" src="/js/src/lib/angular.js"></script>
@@ -21,45 +22,9 @@
 </head>
 <body>
     <div ng-controller="mainController">
-        <nav class="navbar navbar-default" role="navigation">
-          <div class="container-fluid">
-            <!-- Brand and toggle get grouped for better mobile display -->
-            <div class="navbar-header">
-              <a class="navbar-brand" href="#">Paint</a>
-            </div>
-
-            <!-- Collect the nav links, forms, and other content for toggling -->
-            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-              <ul class="nav navbar-nav">
-                <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">File</a>
-                    <ul class="dropdown-menu" role="menu">
-                        <li class="head">
-                            <a  href="#" ng-click="drawing.layerManager.addLayer()">Add Layer</a>
-                            <label add-image >
-                                + add image
-                                <input 
-                                    class="add-image"
-                                    type="file">
-                            </label>
-                        </li>
-                    </ul>
-                </li>
-                <li class="dropdown">
-                  <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <span class="caret"></span></a>
-                  <ul class="dropdown-menu" role="menu">
-                    <li><a href="#">Action</a></li>
-                    <li><a href="#">Another action</a></li>
-                    <li><a href="#">Something else here</a></li>
-                    <li class="divider"></li>
-                    <li><a href="#">Separated link</a></li>
-                    <li class="divider"></li>
-                    <li><a href="#">One more separated link</a></li>
-                  </ul>
-                </li>
-              </ul>
-            </div><!-- /.navbar-collapse -->
-          </div><!-- /.container-fluid -->
+        <nav class="navbar navbar-default" 
+            ng-include="'/templates/nav.html'"
+            role="navigation">
         </nav>
         <div
             style="position: relative;">
